release/1.0.11/docs/UniFiTooling.md
---
Module Name: UniFiTooling
Module Guid: 7fff91a0-02eb-4df2-84d5-c7d3cd7f7a5d
Download Help Link: https://github.com/Enatec/UniFiTooling/raw/master/docs/README.md
Help Version: 1.0.8
Locale: en-US
---

# UniFiTooling Module
## Description
Ubiquiti UniFi Security Gateway automation via the API of the Ubiquiti UniFi Controller

## UniFiTooling Cmdlets
### [Get-Unifi5minutesApStats](Get-Unifi5minutesApStats.md)
Get Access Point stats in 5 minute segments

### [Get-Unifi5minutesClientStats](Get-Unifi5minutesClientStats.md)
Get user/client statistics in 5 minute segments

### [Get-Unifi5minutesGatewayStats](Get-Unifi5minutesGatewayStats.md)
Get statistics in 5 minute segments for the USG

### [Get-Unifi5minutesSiteStats](Get-Unifi5minutesSiteStats.md)
Get statistics in 5 minute segments for a complete Site

### [Get-UnifiDailyApStats](Get-UnifiDailyApStats.md)
Get daily stats Access Point stats

### [Get-UnifiDailyClientStats](Get-UnifiDailyClientStats.md)
Get daily user/client statistics for a given user/client

### [Get-UnifiDailyGatewayStats](Get-UnifiDailyGatewayStats.md)
Get daily statistics for the USG

### [Get-UnifiDailySiteStats](Get-UnifiDailySiteStats.md)
Get daily statistics for a complete Site

### [Get-UnifiFirewallGroupDetails](Get-UnifiFirewallGroupDetails.md)
Get the details about one Firewall Group via the API of the UniFi Controller

### [Get-UnifiFirewallGroups](Get-UnifiFirewallGroups.md)
Get a List Firewall Groups via the API of the UniFi Controller

### [Get-UnifiHourlyApStats](Get-UnifiHourlyApStats.md)
Get hourly stats Access Point stats

### [Get-UnifiHourlyClientStats](Get-UnifiHourlyClientStats.md)
Get hourly user/client statistics for a given user/client

### [Get-UnifiHourlyGatewayStats](Get-UnifiHourlyGatewayStats.md)
Get hourly statistics for the USG

### [Get-UnifiHourlySiteStats](Get-UnifiHourlySiteStats.md)
Get horly statistics for a complete Site

### [Get-UnifiNetworkDetails](Get-UnifiNetworkDetails.md)
Get the details about one network via the API of the UniFi Controller

### [Get-UnifiNetworkList](Get-UnifiNetworkList.md)
Get a List Networks via the API of the UniFi Controller

### [Get-UnifiSpeedTestResult](Get-UnifiSpeedTestResult.md)
Get the UniFi Security Gateway (USG) Speed Test results

### [Invoke-UniFiApiLogin](Invoke-UniFiApiLogin.md)
Login to API of the UniFi Controller

### [Invoke-UniFiApiLogout](Invoke-UniFiApiLogout.md)
Logout from the API of the UniFi Controller

### [Invoke-UnifiAuthorizeGuest](Invoke-UnifiAuthorizeGuest.md)
Authorize a client device via the API of the UniFi Controller

### [Invoke-UnifiBlockClient](Invoke-UnifiBlockClient.md)
Block a client device via the API of the UniFi Controller

### [Invoke-UnifiForgetClient](Invoke-UnifiForgetClient.md)
Forget one or more client devices via the API of the UniFi Controller

### [Invoke-UnifiReconnectClient](Invoke-UnifiReconnectClient.md)
Reconnect a client device via the API of the UniFi Controller

### [Invoke-UnifiUnauthorizeGuest](Invoke-UnifiUnauthorizeGuest.md)
Unauthorize a client device via the API of the UniFi Controller

### [Invoke-UnifiUnblockClient](Invoke-UnifiUnblockClient.md)
Unblock a client device via the API of the UniFi Controller

### [New-UnifiClientDevice](New-UnifiClientDevice.md)
Create a new user/client-device via the API of the UniFi Controller

### [New-UniFiConfig](New-UniFiConfig.md)
Creates the UniFi config JSON file

### [Set-UnifiFirewallGroup](Set-UnifiFirewallGroup.md)
Get a given Firewall Group via the API of the UniFi Controller

### [Set-UnifiNetworkDetails](Set-UnifiNetworkDetails.md)
Modifies one network via the API of the UniFi Controller


